Explicitly set the interactive flag for PackageKit transactions

Since PackageKit commit 86f4a2fbf5fcb1230c68a57c4a7bc066aa3f7ef4 the polkit authentication dialog is only shown if the transaction is flagged as interactive

BUG: 442383


(cherry picked from commit 56013c2afffd369cc59c8f616fa6d8328413a189)